--- a/users/templates/registration/reset_password.html
+++ b/users/templates/registration/reset_password.html
@@ -1,25 +1,41 @@
 {% extends "base.html" %}
 {% block content %}
-<div>
-    {% comment %} for non-field errors {% endcomment %}
-    {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-            <p>{{error}}</p>
-        {% endfor %}
-    {% endif %}
-</div>
-<div>
-    {% if messages %}
-        {% for message in messages %}
-        <p>{{message}}</p>
-        {% endfor %}
-    {% endif %}
-</div>
-<div>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">Reset Password</button>
-    </form>
-</div>
+<h1 class="text-2xl font-semibold text-center my-4">Recover Your Account</h1>
+<section class="w-5/6 md:w-1/3 mx-auto p-4 border border-gray-400 rounded-md shadow-xl">
+    
+    <div>
+        {% comment %} for non-field errors {% endcomment %}
+        {% if form.non_field_errors %}
+            {% for error in form.non_field_errors %}
+                <p>{{error}}</p>
+            {% endfor %}
+        {% endif %}
+    </div>
+    <div>
+        {% if messages %}
+            {% for message in messages %}
+            <p>{{message}}</p>
+            {% endfor %}
+        {% endif %}
+    </div>
+    <div>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {% for field in form %}
+                <label for="{{field.id_for_label}}" class="font-semibold text-lg">
+                    {{field.label}}
+                </label>
+                <div>
+                    {{field}}
+                </div>
+            {% endfor %}
+            {% comment %} {{form.as_p}} {% endcomment %}
+            <button 
+                type="submit"
+                class="p-4 w-full rounded-md bg-violet-500 hover:bg-violet-600 text-lg font-semibold">
+                Reset Password
+            </button>
+        </form>
+    </div>
+</section>
 {% endblock content %}
