--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}TaskMaster{% endblock title %}
 {% block content %}
 <!-- Hero Section -->
 <section class="bg-blue-600 text-white py-32 md:py-40">
