--- a/core/templates/logged_nav.html
+++ b/core/templates/logged_nav.html
@@ -1,7 +1,7 @@
 <header class="bg-white shadow-md">
     <nav class="container mx-auto px-6 py-3">
       <div class="flex justify-between items-center">
-        <a href="index.html" class="text-xl font-bold text-gray-800"
+        <a href="{% url 'home' %}" class="text-xl font-bold text-gray-800"
           >Taskify</a
         >
         <div class="hidden md:flex space-x-4">
@@ -16,9 +16,9 @@
           <a href="{% url 'view-task' %}" class="text-gray-600 hover:text-gray-800"
             >Tasks
           </a>
-          <a href="{% url 'group-list' %}" class="text-gray-600 hover:text-gray-800"
+          {% comment %} <a href="{% url 'group-list' %}" class="text-gray-600 hover:text-gray-800"
             >Groups</a
-          >
+          > {% endcomment %}
           
           <a
             href="{% url 'create-task' %}"
@@ -86,7 +86,7 @@
           </div>
         </div>
       </div>
-      <div id="mobile-menu" class="md:hidden hidden mt-4">
+      <div id="mobile-menu" class="md:hidden hidden mt-4 absolute z-50 bg-gray-100 w-full p-4 rounded-md">
         <a href="{% url 'admin-dashboard' %}" class="block py-2 text-gray-600 hover:text-gray-800"
           >Dashboard</a
         >
