--- a/tasks/templates/task_form.html
+++ b/tasks/templates/task_form.html
@@ -2,7 +2,7 @@
 {% block title %}Task Form{% endblock title %}
 {% block content %}
 
-<div class="md:w-1/2 mx-auto  mt-10 p-3 bg-cyan-50 rounded-md">
+<div class="md:w-1/2 mx-auto p-4 pt-10 bg-cyan-50 rounded-md">
     <div>
         <h1 class="text-3xl text-center font-bold mb-4">Create New Task with Details</h1>
         {% if message %}
@@ -11,7 +11,7 @@
             </p>
         {% endif %}
     </div>
-    <div class="p-4 w-3/4 mx-auto border-2 border-black rounded-md">
+    <div class="p-4 w-11/12 md:w-3/4 mx-auto border-2 border-black rounded-md">
         <div>
             {% if messages %}
                 {% for message in messages %}
@@ -28,7 +28,7 @@
 
                 <div 
                     class="{% if field.label == "Status" or field.label == "Due date" %}
-                        md:w-1/3 md:inline-block mr-8 {% endif %}"
+                        w-full md:w-1/3 md:inline-block mr-8 {% endif %}"
                     >
                     <label 
                         for="{{field.id_for_label}}"
@@ -55,7 +55,7 @@
             {% comment %} {{task_detail_form.as_p}} {% endcomment %}
             <button 
                 type="submit" 
-                class="w-full bg-rose-500 p-2 my-4 rounded-md shadow-md font-bold text-lg"
+                class="w-full bg-rose-500 hover:bg-rose-400 p-2 my-4 rounded-md shadow-md font-bold text-lg"
                 >Submit 
             </button>
         </form>
