--- a/users/templates/admin/assign_role.html
+++ b/users/templates/admin/assign_role.html
@@ -1,15 +1,28 @@
 {% extends "admin/dashboard.html" %}
 {% block admin_content %}
-    <div>
+    <div class="w-5/6 md:w-1/3 mx-auto border border-gray-400 rounded-sm shadow-xl p-4 mt-10">
+        <h1 class="text-2xl font-semibold my-4">Change User Role</h1>
         {% if messages %}
             {% for message in messages %}
-                <p>{{message}}</p>
+                <p class="p-2 bg-rose-200 border rounded-sm my-2">{{message}}</p>
             {% endfor %}
         {% endif %}
         <form action="" method="POST">
             {% csrf_token %}
-            {{form}}
-            <button type="submit">Assign Role</button>
+            {% for field in form %}
+                <div>
+                    <label for="{{field.id_for_label}}" class="text-lg font-semibold">{{field.label}}</label>
+                    <div>
+                        {{field}}
+                    </div>
+                </div>
+            {% endfor %}
+            {% comment %} {{form}} {% endcomment %}
+            <button 
+                type="submit"
+                class="w-full bg-violet-500 hover:bg-violet-600 font-bold text-lg p-4 rounded-md ">
+            Assign Role
+            </button>
         </form>
     </div>
 {% endblock admin_content %}
