--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class='w-1/3 mx-auto border-2 rounded-md p-4 my-4'>
+<div class='w-11/12 md:w-1/3 mx-auto border-2 rounded-md p-4 my-4'>
     <h1 class="text-3xl text-center font-bold my-4">Login</h1>
     <div>
         {% comment %} for non-field errors {% endcomment %}
@@ -13,7 +13,7 @@
     <div>
         {% if messages %}
             {% for message in messages %}
-            <p>{{message}}</p>
+            <p class="p-2 border rounded-sm bg-rose-300 my-2">{{message}}</p>
             {% endfor %}
         {% endif %}
     </div>
@@ -37,7 +37,7 @@
             </button>
         </form>
         <p class="text-blue-800 font-bold ">
-            <a href="{% url 'password-reset' %}">Forgot Password</a>
+            <a href="{% url 'password-reset' %}">Forgot Password?</a>
         </p>
     </div>
 </div>
