--- a/users/templates/registration/register.html
+++ b/users/templates/registration/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1 class="font-bold text-3xl text-center my-4">Register Now</h1>
-    <div class="w-1/3 mx-auto p-4 border-2 rounded-md border-violet-950">
+    <div class="w-11/12 md:w-1/3 mx-auto p-4 border-2 rounded-md border-violet-950">
         {% comment %} for non-field errors {% endcomment %}
         <div>
 
